Implement marshalling for GParamSpec

https://bugzilla.gnome.org/show_bug.cgi?id=681565

Co-Authored-By: Martin Pitt <martinpitt@gnome.org>